media query tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*************************************************
     GENERAL STYLES
- *************************************************/
+*************************************************/
 *,
 *::before,
 *::after {
@@ -43,7 +43,7 @@ img {
 
 /************************************************
     UTILITIES
- ************************************************/
+************************************************/
 
 /* LAYOUT */
 .container {
@@ -68,7 +68,7 @@ img {
 
 /************************************************
     SITE SECTIONS
- ************************************************/
+************************************************/
 
 /* HEADER */
 .site-header {
@@ -126,4 +126,12 @@ img {
 
 /************************************************
     SOLUZIONE RESPONSIVE
- ************************************************/
+************************************************/
+
+/* TABLET */
+@media screen and (max-width: 768px) {
+	.container {
+		width: 100%;
+	}
+}
+
