--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,46 @@ img {
 	}
 }
 
+/* PHONE */
+@media screen and (max-width: 480px) {
+
+    h2 {
+        margin-bottom: 2.5rem;
+        font-size: 2.6rem;
+        color: #fffffe;
+    }
+
+	.container {
+		width: 100%;
+        padding: 0;
+	}
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* lessons section */
+    .lessons .col {
+        width: 100%;
+        margin: 2rem auto;
+        padding: 0px 75px;
+    }
+
+    /* steps section */
+    .steps .col {
+        width: 100%;
+        margin: 2rem auto;
+        padding: 0px 90px;
+    }
+
+    /* why us section */
+    .why-us .col-left {
+        width: 70%;
+        padding-bottom: 3rem;
+    }
+
+    .why-us .col-right {
+        width: 80%;
+    }
+}
