--- a/css/style.css
+++ b/css/style.css
@@ -128,15 +128,23 @@ img {
     SOLUZIONE RESPONSIVE
 ************************************************/
 
+/* BONUS */
+@media only screen and (max-width: 1160px) {
+	.container {
+        max-width: 1140px;
+		width: 100%;
+	}
+}
+
 /* TABLET */
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	.container {
 		width: 100%;
 	}
 }
 
 /* PHONE */
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 
     h2 {
         margin-bottom: 2.5rem;
@@ -172,9 +180,11 @@ img {
     .why-us .col-left {
         width: 70%;
         padding-bottom: 3rem;
+        
     }
 
     .why-us .col-right {
         width: 80%;
+        margin-bottom: 0;
     }
 }
